# cookiecutter-ai-conventions

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruffignore  404.html  BEST_PRACTICES_RESEARCH_2025.md  CLAUDE.md  CLI_POLISH_CLARIFICATIONS.md  CONTRIBUTING.md  LICENSE  Makefile  PR_FEEDBACK_ACTION_PLAN.md  README.md  TODO.md  bootstrap.sh  convert_yaml.py  cookiecutter.json  cookiecutter.yaml  example-capture-learning-command.md  example-review-learning-command.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
FAQ/: index.html
MIGRATION/: index.html
community-domains/: registry.json  registry.yaml
community-domains/git/: core.md
community-domains/testing/: core.md
community-domains/writing/: commit-messages.md  core.md
configuration-system/: index.html
creating-domains/: index.html
developing/: index.html
docs/: FAQ.md  MIGRATION.md  configuration-system.md  creating-domains.md  developing.md  getting-started.md  index.md  providers.md  textual-tui.md  troubleshooting.md  tutorials.md
docs/examples/: migration-from-cursorrules.md  migration-from-team-wiki.md
docs/reference/: api.md  cli.md  configuration.md
docs/templates/: migration-prompt.md
examples/migration-from-cursorrules/: index.html
examples/migration-from-team-wiki/: index.html
getting-started/: index.html
hooks/: README.md  constants.py  models.py  post_gen_project.py  pre_gen_project.py
providers/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/configuration/: index.html
search/: search_index.json
src/cookiecutter_ai_conventions/: __about__.py  __init__.py
tests/: __init__.py  conftest.py  test_aider_provider.py  test_bootstrap_removal.py  test_bootstrap_script.py  test_canary_system.py  test_capture_functionality.py  test_claude_provider.py  test_cli_architecture.py  test_cli_commands.py  test_cli_commands_add.py  test_cli_commands_remove.py  test_cli_comprehensive.py  test_cli_group1_auto_sync_add_remove.py  test_cli_group2_audit_optional.py  test_cli_group3_documentation.py  test_codex_provider.py  test_configuration_system.py  test_context_canary.py  test_copilot_provider.py  test_cursor_provider.py  test_domain_composition.py  test_domain_resolver.py  test_e2e.py  test_e2e_cli_installation.py  test_e2e_cookiecutter.py  test_e2e_installation.py  test_e2e_template_processing.py  test_e2e_uv_tool_workflow.py  test_hooks.py  test_integration_hooks.py  test_integration_python_validation.py  test_provider_abstraction.py  test_provider_selection.py  test_selective_file_generation.py  test_shorthand_syntax.py  test_smoke_basic.py  test_textual_tui.py  test_tui_provider_selection.py  test_windsurf_provider.py
textual-tui/: index.html
troubleshooting/: index.html
tutorials/: index.html
{{cookiecutter.project_slug}}/: .aider.conf.yml  .cursorrules  .windsurfrules  AGENTS.md  CONVENTIONS.md  README.md  UPDATE.md  codex.sh  global.md  install.py  pyproject.toml
{{cookiecutter.project_slug}}/.claude/commands/: capture-learning.md  review-learnings.md
{{cookiecutter.project_slug}}/.codex/: config.json
{{cookiecutter.project_slug}}/.cursor/rules/: git.mdc  main.mdc  testing.mdc  writing.mdc
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/.github/prompts/: git.prompt.md  testing.prompt.md  writing.prompt.md
{{cookiecutter.project_slug}}/.windsurf/rules/: git.md  main.md  testing.md  writing.md
{{cookiecutter.project_slug}}/ai_conventions/: __init__.py  capture.py  cli.py  config.py  config_cli.py  domain_resolver.py  sync.py  tui.py
{{cookiecutter.project_slug}}/ai_conventions/commands/: __init__.py  add.py  config.py  remove.py  sync.py
{{cookiecutter.project_slug}}/ai_conventions/providers/: __init__.py  aider.py  base.py  claude.py  codex.py  copilot.py  cursor.py  windsurf.py
{{cookiecutter.project_slug}}/commands/: capture-learning.md  capture-learning.py  review-learnings.md  review-learnings.py
{{cookiecutter.project_slug}}/community-domains/git/: core.md
{{cookiecutter.project_slug}}/community-domains/writing/: pr-summaries.md
{{cookiecutter.project_slug}}/docs/: aider-setup.md  claude-setup.md  codex-setup.md  copilot-setup.md  cursor-setup.md  windsurf-setup.md
{{cookiecutter.project_slug}}/domains/: .gitkeep
{{cookiecutter.project_slug}}/domains/pytest/: core.md
{{cookiecutter.project_slug}}/domains/testing/: core.md
{{cookiecutter.project_slug}}/projects/: README.md
{{cookiecutter.project_slug}}/staging/: learnings.md
{{cookiecutter.project_slug}}/templates/claude/: CLAUDE.md.j2  example-claude-index-file.md
{{cookiecutter.project_slug}}/vscode_config/: settings.json
