[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} - AI Development Conventions"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "PyYAML>=6.0",
    "textual>=0.47.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
ai-conventions = "ai_conventions.cli:main"
{%- if cookiecutter.enable_learning_capture %}
capture-learning = "ai_conventions.capture:main"
{%- endif %}
sync-conventions = "ai_conventions.sync:main"
conventions-config = "ai_conventions.config_cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cookies>=0.6",
]